# Schwab-API-Trader-Public

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  PROJECT.md  README.md  pyproject.toml  railway.toml  start.sh
memory/: PROJECT-CONTEXT.md  TRADING-STRATEGY.md  WEEKLY-REVIEW.md
routines/: README.md  daily-summary.md  market-open.md  midday.md  pre-market.md  weekly-review.md
scripts/: notify.sh  schwab_server.sh
src/schwab_trader/: __init__.py  cli.py
src/schwab_trader/advisor/: service.py
src/schwab_trader/agent/: monitor.py  service.py  store.py  tools.py
src/schwab_trader/auth/: __init__.py  models.py  oauth.py  service.py  session_store.py  token_store.py
src/schwab_trader/broker/: __init__.py  service.py
src/schwab_trader/core/: settings.py
src/schwab_trader/earnings/: service.py
src/schwab_trader/edgar/: service.py
src/schwab_trader/execution/: __init__.py  audit.py  service.py
src/schwab_trader/fred/: service.py
src/schwab_trader/intermarket/: __init__.py  service.py
src/schwab_trader/journal/: __init__.py  metrics.py  models.py  reconstruction.py  store.py  sync.py
src/schwab_trader/news/: service.py
src/schwab_trader/notifications/: email.py  sms.py
tests/: conftest.py
tests/integration/: test_agent_routes.py  test_app.py  test_auth_routes.py
tests/unit/: test_broker_service.py  test_cli.py  test_journal_store.py  test_journal_sync.py  test_oauth_config.py  test_oauth_service.py  test_risk_engine.py  test_schwab_client.py  test_trade_metrics.py  test_trade_reconstruction.py
(+24 files in other folders)
