[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "schwab-api-trader"
version = "0.1.0"
description = "Local-first Schwab trading copilot focused on analytics, risk checks, and guardrailed execution."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "httpx>=0.28.0,<1.0.0",
  "pydantic>=2.10.0,<3.0.0",
  "pydantic-settings>=2.6.0,<3.0.0",
  "uvicorn>=0.32.0,<1.0.0",
  "anthropic>=0.50.0",
  "yfinance>=0.2.50",
  "twilio>=9.10.5",
  "orjson>=3.9.0",
  "slowapi>=0.1.9",
]

[project.scripts]
schwab-trader = "schwab_trader.cli:main"

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0,<9.0.0",
  "ruff>=0.8.0,<1.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/schwab_trader"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
exclude = ["everything-claude-code-main"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
